package com.leeq.neu.ancestor;

public class Unknown implements IAT {
  
  
  @Override
  public IAT youngerIAT(IAT other) {
    return other;
  }
}
